--- a/kafka-mirror-maker-2-rlv2.yaml
+++ b/kafka-mirror-maker-2-rlv2.yaml
@@ -1,5 +1,5 @@
 apiVersion: kafka.strimzi.io/v1beta2
-kind: OhioKafkaMirrorMaker2
+kind: KafkaMirrorMaker2
 metadata:
   name: ohio-mirror-maker-2
 spec:
