--- a/mm2-virginia.yaml
+++ b/mm2-virginia.yaml
@@ -15,7 +15,7 @@ spec:
       # -1 means it will use the default replication factor configured in the broker
       config.storage.replication.factor: 1
       offset.storage.replication.factor: 1
-      offset.storage.topic.cleanup.policy: "delete"
+      #offset.storage.topic.cleanup.policy: "delete"
       status.storage.replication.factor: 1
   mirrors:
   - sourceCluster: "virginia-cluster"
