--- a/mm2-ohio.yaml
+++ b/mm2-ohio.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   version: 3.2.0
   replicas: 1
-  connectCluster: "ohio-cluster"
+  connectCluster: "virginia-cluster"
   clusters:
   - alias: "virginia-cluster"
     bootstrapServers: b-1.kafkatestkafkakafkacl.lecbsf.c24.kafka.us-east-1.amazonaws.com:9092,b-3.kafkatestkafkakafkacl.lecbsf.c24.kafka.us-east-1.amazonaws.com:9092,b-2.kafkatestkafkakafkacl.lecbsf.c24.kafka.us-east-1.amazonaws.com:9092
@@ -18,8 +18,8 @@ spec:
       #offset.storage.topic.cleanup.policy: "delete"
       status.storage.replication.factor: 1
   mirrors:
-  - sourceCluster: "virginia-cluster"
-    targetCluster: "ohio-cluster"
+  - sourceCluster: "ohio-cluster"
+    targetCluster: "virginia-cluster"
     sourceConnector:
       config:
         replication.factor: 1
