--- a/mm2-virginia-working.yaml
+++ b/mm2-virginia-working.yaml
@@ -1,16 +1,16 @@
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaMirrorMaker2
 metadata:
-  name: ohio-mm2
+  name: virginia-mm2
 spec:
   version: 3.2.0
   replicas: 1
-  connectCluster: "virginia-cluster"
+  connectCluster: "ohio-cluster"
   clusters:
   - alias: "virginia-cluster"
-    bootstrapServers: dev1.us-east-1.test.vignali.rocks:9092
+    bootstrapServers: b-1.kafkatestkafkakafkacl.lecbsf.c24.kafka.us-east-1.amazonaws.com:9092,b-3.kafkatestkafkakafkacl.lecbsf.c24.kafka.us-east-1.amazonaws.com:9092,b-2.kafkatestkafkakafkacl.lecbsf.c24.kafka.us-east-1.amazonaws.com:9092
   - alias: "ohio-cluster"
-    bootstrapServers: dev1.us-east-2.test.vignali.rocks:9092
+    bootstrapServers: b-2.kafkatestkafkakafkaclu.h40npv.c6.kafka.us-east-2.amazonaws.com:9092,b-1.kafkatestkafkakafkaclu.h40npv.c6.kafka.us-east-2.amazonaws.com:9092,b-3.kafkatestkafkakafkaclu.h40npv.c6.kafka.us-east-2.amazonaws.com:9092
     config:
       # -1 means it will use the default replication factor configured in the broker
       config.storage.replication.factor: 1
@@ -18,8 +18,8 @@ spec:
       #offset.storage.topic.cleanup.policy: "delete"
       status.storage.replication.factor: 1
   mirrors:
-  - sourceCluster: "ohio-cluster"
-    targetCluster: "virginia-cluster"
+  - sourceCluster: "virginia-cluster"
+    targetCluster: "ohio-cluster"
     sourceConnector:
       config:
         replication.factor: 1
