--- a/mm2-virginia.yaml
+++ b/mm2-virginia.yaml
@@ -25,6 +25,7 @@ spec:
         replication.factor: 1
         offset-syncs.topic.replication.factor: 1
         sync.topic.acls.enabled: "false"
+        refresh.topics.interval.seconds: 30
     heartbeatConnector:
       config:
         heartbeats.topic.replication.factor: 1
