updating cluster configs

--- a/kafkaeast1-install/cluster-operator/030-ClusterRoleBinding-strimzi-cluster-operator-kafka-broker-delegation.yaml
+++ b/kafkaeast1-install/cluster-operator/030-ClusterRoleBinding-strimzi-cluster-operator-kafka-broker-delegation.yaml
@@ -9,7 +9,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: virginiacluster
+    namespace: kafkaeast1
 roleRef:
   kind: ClusterRole
   name: strimzi-kafka-broker
