--- a/kafkaeast2-install/cluster-operator/020-RoleBinding-strimzi-cluster-operator.yaml
+++ b/kafkaeast2-install/cluster-operator/020-RoleBinding-strimzi-cluster-operator.yaml
@@ -7,7 +7,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: ohiocluster
+    namespace: kafkaeast2
 roleRef:
   kind: ClusterRole
   name: strimzi-cluster-operator-namespaced
