--- a/kafkaeast2-install/cluster-operator/031-RoleBinding-strimzi-cluster-operator-entity-operator-delegation.yaml
+++ b/kafkaeast2-install/cluster-operator/031-RoleBinding-strimzi-cluster-operator-entity-operator-delegation.yaml
@@ -9,7 +9,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: ohiocluster
+    namespace: kafkaeast2
 roleRef:
   kind: ClusterRole
   name: strimzi-entity-operator
